--- a/assets/css/sass/base/base/_theme_unit_test.scss
+++ b/assets/css/sass/base/base/_theme_unit_test.scss
@@ -106,6 +106,11 @@
 /* blog password form
 ------------------------------------------------->*/
 .post-password-form {
+    display: block;
+    clear: both;
+    p{
+        @extend .clearfix;
+    }
     label {
         float: left;
         display: -webkit-inline-flex;
