--- a/assets/css/sass/utils/themify-icons.scss
+++ b/assets/css/sass/utils/themify-icons.scss
@@ -7,6 +7,7 @@
         url('assets/fonts/themify.svg?-fvbane#themify') format('svg');
     font-weight: normal;
     font-style: normal;
+    font-display: auto
 }
 
 [class^="ti-"], [class*=" ti-"] {
