--- a/assets/css/woocommerce/woocommerce.scss
+++ b/assets/css/woocommerce/woocommerce.scss
@@ -21,6 +21,7 @@
 		url('../../../../../plugins/woocommerce/assets/fonts/star.svg#star') format('svg');
 	font-weight: normal;
 	font-style: normal;
+    font-display: auto
 }
 
 // Animations
