--- a/assets/css/admin/welcome-screen/welcome.scss
+++ b/assets/css/admin/welcome-screen/welcome.scss
@@ -1,7 +1,7 @@
-@import 'bourbon';
-@import '../../../../assets/css/sass/utils/variables';
-@import '../../../../assets/css/sass/utils/mixins';
-@import '../../../../assets/css/sass/vendors/modular-scale';
+// @import 'bourbon';
+// @import '../../../../assets/css/sass/utils/variables';
+// @import '../../../../assets/css/sass/utils/mixins';
+// @import '../../../../assets/css/sass/vendors/modular-scale';
 
 $green: #45b964;
 
