--- a/assets/css/jetpack/jetpack.css
+++ b/assets/css/jetpack/jetpack.css
@@ -1,1 +1,33 @@
-.jetpack_subscription_widget #subscribe-email input{padding:.6180469716em!important;width:100%!important}.widget_google_translate_widget img{display:inline}.widget_google_translate_widget a{text-decoration:none!important}.infinite-scroll .pagination,.infinite-scroll .paging-navigation,.infinite-scroll .storefront-sorting,.infinite-scroll .woocommerce-pagination,.infinite-scroll .woocommerce-result-count,.infinite-scroll ul.products+.storefront-sorting,.infinite-scroll.neverending .site-footer{display:none}.infinity-end.neverending .site-footer{display:block}
+/**
+ * Jetpack
+ */
+/**
+ * Widgets
+ */
+.jetpack_subscription_widget #subscribe-email input {
+  padding: ms(-2) !important;
+  width: 100% !important; }
+
+.widget_google_translate_widget img {
+  display: inline; }
+
+.widget_google_translate_widget a {
+  text-decoration: none !important; }
+
+/**
+ * Infinite Scroll
+ */
+/* Globally hidden elements when Infinite Scroll is supported and in use. */
+.infinite-scroll .paging-navigation,
+.infinite-scroll .pagination,
+.infinite-scroll .woocommerce-pagination,
+.infinite-scroll ul.products + .storefront-sorting,
+.infinite-scroll .woocommerce-result-count,
+.infinite-scroll.neverending .site-footer,
+.infinite-scroll .storefront-sorting {
+  /* Theme Footer (when set to scrolling) */
+  display: none; }
+
+/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before */
+.infinity-end.neverending .site-footer {
+  display: block; }
