--- a/assets/css/jetpack/jetpack.scss
+++ b/assets/css/jetpack/jetpack.scss
@@ -3,10 +3,10 @@
  */
 
 // Imports
-@import 'bourbon';
-@import '../sass/utils/variables';
-@import '../sass/utils/mixins';
-@import '../sass/vendors/modular-scale';
+// @import 'bourbon';
+// @import '../sass/utils/variables';
+// @import '../sass/utils/mixins';
+// @import '../sass/vendors/modular-scale';
 
 /**
  * Widgets
