--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -18,7 +18,7 @@
     }
 }
 
-@media ( min-width: 992px ){
+@media ( min-width: #{ $screen-md } ){
     @for $i from 3 through 6 {
         .footer-widget-col-#{$i}{
             .widget{
