--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -25,26 +25,14 @@
         .menu-toggle{
             display: none;
         }
-        .menu{
+        .primary-navigation{
             padding-left: 0;
             margin: 0;
             > li{
                 display: inline-flex;
                 line-height: 1;
                 > a{
-                    font-size: 13px;
-                    line-height: 90px;
                     padding: 0 20px;
-                }
-
-                /*parent item menu*/
-                &.current-menu-ancestor,
-                &.current-menu-parent,
-                &.current_page_parent,
-                &.current_page_ancestor{
-                    > a{
-                        color: #f00
-                    }
                 }
                 ul{
                     opacity: 0;
@@ -75,7 +63,6 @@
                     }
                     a{
                         display: block;
-                        line-height: 24px;
                         padding: 10px 20px;
                         &:hover{
                             background: rgba(239, 239, 239, 0.28)
@@ -85,12 +72,6 @@
             }
             li{
                 position: relative;
-                list-style: none;
-                &.current-menu-item{
-                    a{
-                        color: #f00
-                    }
-                }
                 &:hover{
                     > ul{
                         pointer-events: auto;
