--- a/inc/customizer/custom-controls/typography/css/slider-customizer.css
+++ b/inc/customizer/custom-controls/typography/css/slider-customizer.css
@@ -15,11 +15,11 @@
 	width: calc(100% - 90px);
 }
 
-.customize-control-woostify-range-slider .gp_range_value.hide-value {
+.customize-control-woostify-range-slider .woostify_range_value.hide-value {
 	display: none;
 }
 
-.customize-control-woostify-range-slider .gp_range_value.hide-value + .woostify-slider {
+.customize-control-woostify-range-slider .woostify_range_value.hide-value + .woostify-slider {
 	width: 100%;
 }
 
@@ -36,12 +36,12 @@
 	cursor: pointer;
 }
 
-.customize-control-woostify-range-slider .gp_range_value .unit {
+.customize-control-woostify-range-slider .woostify_range_value .unit {
 	width: 30px;
 	display:inline-block;
 }
 
-.customize-control-woostify-range-slider .gp_range_value {
+.customize-control-woostify-range-slider .woostify_range_value {
 	display: inline-block;
 	font-size: 14px;
 	padding: 0;
@@ -50,11 +50,11 @@
 	width: 50px;
 }
 
-.customize-control-woostify-range-slider .has-unit .gp_range_value {
+.customize-control-woostify-range-slider .has-unit .woostify_range_value {
 	width: 80px;
 }
  
-.customize-control-woostify-range-slider .gp_range_value span.value {
+.customize-control-woostify-range-slider .woostify_range_value span.value {
     font-size: 12px;
     width: calc(100% - 2px);
     text-align: center;
@@ -64,13 +64,13 @@
     border: 1px solid #DDD;
 }
 
-.customize-control-woostify-range-slider .has-unit .gp_range_value span.value {
+.customize-control-woostify-range-slider .has-unit .woostify_range_value span.value {
 	width: calc(100% - 32px);
 	float: left;
 	display: block;
 }
 
-.customize-control-woostify-range-slider .gp_range_value .unit {
+.customize-control-woostify-range-slider .woostify_range_value .unit {
     width: 29px;
     display: block;
     float: left;
@@ -90,23 +90,23 @@
     line-height: 22px;
 }
 	
-.customize-control-woostify-range-slider .gp_range_value input {
+.customize-control-woostify-range-slider .woostify_range_value input {
     font-size: 12px;
     padding: 0px;
     text-align: center;
     height: 24px;
 }
 
-.customize-control-woostify-range-slider .has-unit .gp_range_value input {
+.customize-control-woostify-range-slider .has-unit .woostify_range_value input {
     width: calc(100% - 30px);
     float: left;
 }
 
-.customize-control-woostify-range-slider .gp-range-title-info {
+.customize-control-woostify-range-slider .woostify-range-title-info {
     display: inline-block;
 }
 
-.customize-control-woostify-range-slider .gp-range-title-area .dashicons {
+.customize-control-woostify-range-slider .woostify-range-title-area .dashicons {
 	cursor: pointer;
 	font-size: 11px;
 	width: 20px;
@@ -118,19 +118,19 @@
 	top: 2px;
 }
 
-.customize-control-woostify-range-slider .gp-range-title-area .dashicons:hover {
+.customize-control-woostify-range-slider .woostify-range-title-area .dashicons:hover {
 	background: #fafafa;
 }
 
-.customize-control-woostify-range-slider .gp-range-title-area .dashicons.selected {
+.customize-control-woostify-range-slider .woostify-range-title-area .dashicons.selected {
 	background: #fff;
 	color: #222;
 }
 
-.customize-control-woostify-range-slider .gp-range-slider-controls {
+.customize-control-woostify-range-slider .woostify-range-slider-controls {
 	float:right;
 }
 
-.customize-control-woostify-range-slider .gp-device-controls > span:first-child:last-child {
+.customize-control-woostify-range-slider .woostify-device-controls > span:first-child:last-child {
 	display: none;
 }
