WOOSTIFY-12 #commit add style for shop page

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -120,8 +120,8 @@
         height: 40px;
         &:after{
             font-size: 16px;
-            right: 12px;
-            top: 12px;
+            width: 40px;
+            height: 40px;
         }
         .search-field{
             padding-right: 40px;
