--- a/assets/css/sass/base/base/typo.scss
+++ b/assets/css/sass/base/base/typo.scss
@@ -4,6 +4,10 @@ select {
     -moz-border-radius: 0;
     border-radius: 0;
     max-width: 100%;
+    &:-moz-focusring{
+    	color: $tr;
+    	text-shadow: 0 0 0 #8f8f8f;
+    }
 }
 
 input{
@@ -29,9 +33,6 @@ button{
     cursor: pointer;
     padding: 0;
     border: 1px solid #cac7c7;
-    &::-moz-focus-inner{
-        border: none $i;
-    }
 }
 
 h1,
@@ -40,37 +41,11 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 700;
     clear: both;
     margin: 15px 0;
-    line-height: 1.2;
     a{
         color: $inh
     }
-}
-
-h1 {
-    font-size: 42px;
-}
-
-h2 {
-    font-size: 40px;
-}
-
-h3 {
-    font-size: 30px;
-}
-
-h4 {
-    font-size: 24px;
-}
-
-h5 {
-    font-size: 20px;
-}
-
-h6 {
-    font-size: 18px;
 }
 
 p {
@@ -97,11 +72,6 @@ cite,
 em,
 i {
     font-style: italic;
-}
-
-li,
-figcaption {
-    line-height: 24px;
 }
 
 blockquote {
