--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -4,6 +4,7 @@
     }
     li{
         list-style: none;
+        line-height: 36px;
     }
     ul.menu{
         padding-left: 0;
@@ -19,7 +20,17 @@
     .widget-area &{
         margin-bottom: 40px;
     }
+    .count{
+    	float: right;
+    }
 }
+
+.widget-title{
+	font-weight: normal;
+	font-size: 18px;
+	margin-bottom: 20px;
+}
+
 .widget_archive,
 .widget_categories,
 .widget_pages{
@@ -32,6 +43,8 @@
         bottom: 1ex
     }
 }
+
+/* tags */
 .tagcloud{
     a{
         border: 1px solid #e2e2e2;
@@ -40,8 +53,14 @@
         margin-bottom: 4px;
         font-size: 14px;
         margin-right: 4px;
+        &:hover{
+        	border-color: $tr;
+        	color: #fff;
+        }
     }
 }
+
+/* search */
 .search-form,
 .woocommerce-product-search{
     position: relative;
@@ -58,7 +77,7 @@
     }
     &:after{
         content: "\e610";
-        font-family: 'themify';
+        font-family: $icon;
         font-size: 20px;
         position: absolute;
         right: 0;
@@ -99,5 +118,157 @@
         top: 0;
         z-index: 2;
         border: 0;
+    }
+}
+
+/* mini cart */
+.woocommerce-mini-cart{
+	padding-left: 0;
+}
+.product_list_widget{
+	a{
+		&:not(.remove_from_cart_button){
+			display: block;
+		}
+	}
+	li{
+		position: relative;
+		min-height: 90px;
+		padding-right: 0;
+		padding-left: 90px;
+		border-bottom: 1px solid #f7f7f7;
+	}
+	img{
+		max-width: 70px;
+		max-height: 70px;
+		position: absolute;
+		left: 0;
+	}
+	&.woocommerce-mini-cart{
+		img{
+			left: 0;
+			top: 20px;
+		}
+	}
+}
+.woocommerce-mini-cart__total{
+	@include flex( flex, space-between, flex-start );
+}
+.woocommerce-mini-cart__buttons{
+	margin-bottom: 0;
+	.button{
+		font-size: 12px;
+		padding: 10px 15px;
+	}
+	a.button{
+		width: 50%;
+		display: inline-block;
+		border-radius: 0;
+		text-align: center;
+		text-transform: uppercase;
+	}
+	a.checkout{
+		border-left: 1px solid #fff;
+	}
+}
+
+/* list, reviews, top rate product */
+.widget_products,
+.widget_recent_reviews,
+.widget_top_rated_products{
+    li{
+        min-height: 90px;
+        position: relative;
+        padding: 10px 0 10px 80px;
+        
+        @extend .clearfix;
+        &:last-of-type{
+        	border-bottom: 0;
+        }
+    }
+    a{
+        line-height: 1.3;
+        margin-bottom: 5px;
+    }
+    .star-rating{
+        display: block;
+    }
+    del{
+        margin-right: 5px;
+        float: left;
+        clear: both;
+    }
+    ins{
+        float: left;
+        background: $tr;
+    }
+}
+
+/* product reviews */
+.widget_recent_reviews{
+    .reviewer{
+        float: left;
+        clear: both;
+    }
+}
+
+/* Product Categories List */
+.widget_product_categories{
+	.product-categories > li{
+		ul{
+			margin-left: 10px;
+			li:before{
+				content: "\e649";
+				font-family: $icon;
+				font-size: 10px;
+				margin-right: 5px;
+			}
+		}
+	}
+}
+
+/* Layered Nav Dropdown */
+.woocommerce-widget-layered-nav-dropdown__submit{
+	margin-top: 1em;
+}
+
+/* price range slider */
+.price_slider_wrapper{
+    .price_slider{
+        margin-bottom: 25px;
+        position: relative;
+        height: 2px;
+        margin-left: .5em;
+		margin-right: .5em;
+        @extend .clearfix
+    }
+    .ui-widget-header{
+    	height: 100%;
+        position: absolute;
+    }
+    .ui-slider-handle{
+        cursor: pointer;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        margin-left: -10px;
+        border-radius: 50%;
+        background: #fff;
+        top: 50%;
+        @include translatey( -50% );
+        @include shadow(1px 1px 3px 0px rgba(0, 0, 0, 0.2));
+    }
+    .price_slider_amount{
+        input,
+        .clear{
+            display: none;
+        }
+        button{
+            display: inline-block;
+            margin-right: 15px;
+        }
+        .price_label{
+            display: inline-block;
+        }
     }
 }
