WOOSTIFY-12 #comment add single add to cart

--- a/assets/css/sass/base/base/common.scss
+++ b/assets/css/sass/base/base/common.scss
@@ -1,12 +1,8 @@
 .clearfix {
     &:after{
-        content: ".";
+        content: '';
         display: block;
         clear: both;
-        visibility: hidden;
-        line-height: 0;
-        height: 0;
-        overflow: hidden;
     }
 }
 
