--- a/assets/css/sass/woocommerce/woocommerce-buttons.scss
+++ b/assets/css/sass/woocommerce/woocommerce-buttons.scss
@@ -1,9 +1,10 @@
-button.button,
-input.button,
+.button:not([name="apply_coupon"]):not([name="update_cart"]):not(a),
 .woocommerce-widget-layered-nav-dropdown__submit,
-.woocommerce-mini-cart__buttons a{
+.buttons .button,
+.clear-cart-btn,
+.checkout-button{
 	border: 0;
-	padding: 5px 20px;
+	padding: .35em 1.5em;
 	border-radius: 2px;
 	@extend .duration;
 }
