--- a/assets/css/sass/woocommerce/cart-page.scss
+++ b/assets/css/sass/woocommerce/cart-page.scss
@@ -1,5 +1,5 @@
 .woocommerce-cart{
-	h1, h2{
+	h2{
 		font-size: 24px;
 		font-weight: normal;
 	}
@@ -14,6 +14,7 @@
 .woocommerce-cart-form__contents{
 	border-width: 0;
 	border-collapse: separate;
+	table-layout: auto;
 	thead{
 		display: none;
 	}
@@ -33,7 +34,11 @@
 	}
 	th, td{
 		border-width: 0;
-		padding: 30px 0
+		padding: 30px 0;
+		&:not(:first-child):not(:last-child):not(.product-thumbnail){
+			padding-left: 20px;
+			padding-right: 20px;
+		}
 	}
 	.product-remove{
 		width: 40px;
@@ -53,10 +58,7 @@
 		}
 	}
 	.product-thumbnail{
-		width: 100px;
-		img{
-			max-width: 70px;
-		}
+		width: 70px;
 	}
 	.product-name,
 	.product-subtotal{
