--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -1,3 +1,11 @@
+/* woocommerce header title */
+.woocommerce-products-header__title{
+	font-size: 1.7em;
+	margin-top: 0.3em;
+	margin-bottom: 1.5em;
+	font-weight: normal;
+}
+
 /* sorting */
 .woostify-sorting{
 	@include flex( flex, space-between, center );
